Email address updated and Bulk Whatsapp portfolio updated

--- a/contacts.html
+++ b/contacts.html
@@ -46,7 +46,7 @@
             <div class="header-contacts">
                <ul>
                   <li><span>01. Call </span> <a href="tel:+917359737457">+91 7359735457</a></li>
-                  <li><span>02. Write </span> <a href="mailto:hkpanchani7@gmail.com">hkpanchani7@gmail.com</a></li>
+                  <li><span>02. Write </span> <a href="mailto:hello@hkpanchani.dev">{your-name}@hkpanchani.dev</a></li>
                </ul>
                <a class="ajax contacts-btn ntitle">Hiren Panchani</a>
             </div>
@@ -107,7 +107,7 @@
                         </div>
                         <div class="contact-details fl-wrap">
                            <ul>
-                              <li><span>01. Mail :</span><a href="mailto:hkpanchani7@gmail.com" target="_blank">hkpanchani7@gmail.com</a></li>
+                              <li><span>01. Mail :</span><a href="mailto:hello@hkpanchani.dev" target="_blank">{your-name}@hkpanchani.dev</a></li>
                               <li><span>02. Adress :</span><a href="#" target="_blank">Bhuj-Kutch, GJ,370040</a></li>
                               <li><span>03. Phone :</span><a href="tel:+917359737457">+91 735 973 7457</a></li>
                            </ul>
