--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
         <div class="header-contacts">
             <ul>
                 <li><span>01. Call </span> <a href="tel:+917359737457">+91 7359735457</a></li>
-                <li><span>02. Write </span> <a href="mailto:hkpanchani7@gmail.com">hkpanchani7@gmail.com</a></li>
+                <li><span>02. Write </span> <a href="mailto:hello@hkpanchani.dev">{your-name}@hkpanchani.dev</a></li>
             </ul>
             <a class="ajax contacts-btn ntitle">Hiren Panchani</a>
         </div>
@@ -440,7 +440,7 @@
                                             <div class="post-det-num">01.</div>
                                         </div>
                                         <div class="post-det fl-wrap">
-                                            <h3><a href="portfolio-single4.html" target="_blank" class="ajax">WhatsArc</a></h3>
+                                            <h3><a href="portfolio-single4.html" target="_blank" class="ajax">Bulk Whatsapp Sender</a></h3>
                                             <div class="post-header fl-wrap"><span>27 may 2020</span> <a href="#">Branding</a>
                                                 <a href="#">Video</a></div>
                                             <p>Almost every smartphone user is using Whatsapp as primary chat application. So, it makes Whatsapp automatically effective way to market your business or to give any message nowadays...</p>
