--- a/portfolio/desktop/whatsarc_portfolio.html
+++ b/portfolio/desktop/whatsarc_portfolio.html
@@ -48,7 +48,7 @@
         <div class="header-contacts">
             <ul>
                 <li><span>01. Call </span> <a href="tel:+917359737457">+91 7359735457</a></li>
-                <li><span>02. Write </span> <a href="mailto:hkpanchani7@gmail.com">hkpanchani7@gmail.com</a></li>
+                <li><span>02. Write </span> <a href="mailto:hello@hkpanchani.dev">{your-name}@hkpanchani.dev</a></li>
             </ul>
             <a class="ajax contacts-btn ntitle">Hiren Panchani</a>
         </div>
@@ -136,7 +136,7 @@
                     <section class="scroll_sec" id="sec1">
                         <div class="container">
                             <div class="section-title">
-                                <h3>WhatsArc</h3>
+                                <h3>Bulk Whatsapp Sender</h3>
                                 <p>Almost every smartphone user is using Whatsapp as primary chat application. So, it
                                     makes Whatsapp automatically effective way to market your business or to give any
                                     message nowadays..... </p>
@@ -202,7 +202,7 @@
                                     <li><h4>So, it makes Whatsapp automatically effective way to market your business or
                                         to give any message nowadays.</h4></li>
                                     <br>
-                                    <li><h4>For this purpose we have created this application Whatsarc which allows you
+                                    <li><h4>For this purpose we have created this application Bulk-Whatsapp-Sender which allows you
                                         to send same customised message to multiple users at same time by just uploading
                                         one file.</h4></li>
                                     <br>
@@ -254,15 +254,15 @@
                             <!-- project-details-->
                             <div class="project-details fl-wrap">
                                 <ul>
-                                    <li><span>01. Date :</span> 26.05.2019</li>
-                                    <li><span>02. Client :</span> Envato</li>
-                                    <li><span>03. Category : </span>Design</li>
-                                    <li><span>04. Online : </span> <a href="#" target="_blank">themeforest.net </a>
+                                    <li><span>01. Date :</span> 15.07.2020</li>
+                                    <li><span>02. Client :</span> Open Source</li>
+                                    <li><span>03. Category : </span>Desktop Application</li>
+                                    <li><span>04. Online : </span> <a href="https://whatsarc.etus.link" target="_blank">Bulk-Whatsapp-Sender </a>
                                     </li>
                                 </ul>
                             </div>
                             <!-- project-details end -->
-                            <a href="https://play.google.com/store/apps/details?id=com.encycode.etus"
+                            <a href="https://github.com/hkpanchani/Bulk-Whatsapp-Sender"
                                class="btn   color-bg  fl-btn det-anim"
                                target="_blank"><span>View Project</span></a>
                         </div>
