--- a/portfolio/web/etus_portfolio_web.html
+++ b/portfolio/web/etus_portfolio_web.html
@@ -48,7 +48,7 @@
         <div class="header-contacts">
             <ul>
                 <li><span>01. Call </span> <a href="tel:+917359737457">+91 7359735457</a></li>
-                <li><span>02. Write </span> <a href="mailto:hkpanchani7@gmail.com">hkpanchani7@gmail.com</a></li>
+                <li><span>02. Write </span> <a href="mailto:hello@hkpanchani.dev">{your-name}@hkpanchani.dev</a></li>
             </ul>
             <a class="ajax contacts-btn ntitle">Hiren Panchani</a>
         </div>
