--- a/about.html
+++ b/about.html
@@ -259,7 +259,7 @@
                                 <div class="container">
                                     <div class="section-title">
                                         <h3>Resume</h3>
-                                        <p>Skills can be taught, personality is inherent. I prefer to keep learning, continue challenging myself, and do interesting things that matter.</p>
+                                        <p>Education and Experience is one thing no one can take away from you.</p>
                                     </div>
                                     <!--process-wrap  -->
                                     <div class="process-wrap fl-wrap resume" style="border-radius: 50px">
