--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
                 <span class="lh_dec color-bg"></span>
                 <div class="left-header_social">
                     <ul >
-                        <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fab fa-vk"></i></a></li>
+                        <li><a href="https://ln.etus.link" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a href="https://fb.etus.link" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://wa.etus.link" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+                        <li><a href="https://insta.etus.link" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://tg.etus.link" target="_blank"><i class="fab fa-telegram"></i></a></li>
                     </ul>
                 </div>
             </aside>
