Social Media Links Updated on contact footer

--- a/contacts.html
+++ b/contacts.html
@@ -148,12 +148,13 @@
                </div>
                <div class="main_social">
                   <span class="main-social-title">Find on:</span>
-                  <ul>
-                     <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                     <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                     <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                     <li><a href="#" target="_blank"><i class="fab fa-vk"></i></a></li>
-                  </ul>
+                  <ul >
+                     <li><a href="https://ln.etus.link" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                     <li><a href="https://fb.etus.link" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                     <li><a href="https://wa.etus.link" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+                     <li><a href="https://insta.etus.link" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                     <li><a href="https://tg.etus.link" target="_blank"><i class="fab fa-telegram"></i></a></li>
+                 </ul>
                </div>
                <script type="text/javascript">
                  setTimeout(contactAnimation, 3000);
