--- a/portfolio.html
+++ b/portfolio.html
@@ -151,19 +151,15 @@
                                 <div class="gallery-item">
                                     <div class="grid-item-holder hov_zoom">
                                         <div class="grid-post-media fl-wrap">
-                                            <a href="portfolio-single4.html" target="_blank" class="ajax"><img
+                                            <a href="#" target="_blank" class="ajax"><img
                                                     src="images/folio/1.jpg" alt=""></a>
                                             <div class="post-det-num">01.</div>
                                         </div>
                                         <div class="post-det fl-wrap">
-                                            <h3><a href="portfolio-single4.html" target="_blank" class="ajax">RKU-IT-MA</a></h3>
-                                            <div class="post-header fl-wrap"><span>27 may 2020</span> <a href="#">Branding</a>
-                                                <a href="#">Video</a></div>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in
-                                                pulvinar neque. Nulla finibus lobortis pulvinar. Donec a consectetur
-                                                nulla...</p>
-                                            <a href="portfolio-single4.html" target="_blank" class="ajax post-link">Read
-                                                More <i class="fal fa-long-arrow-right"></i></a>
+                                            <h3><a href="#" target="_blank" class="ajax">On-Premises at RK University</a></h3>
+                                            <p>Architecture at RK University has 25+ on-premise servers, fully managed and maintained at a go including networking, runtime.</p>
+                                            <!-- <a href="#" target="_blank" class="ajax post-link">Read
+                                                More <i class="fal fa-long-arrow-right"></i></a> -->
                                         </div>
                                     </div>
                                     <div class="pr-bg"></div>
@@ -173,20 +169,16 @@
                                 <div class="gallery-item">
                                     <div class="grid-item-holder hov_zoom">
                                         <div class="grid-post-media fl-wrap">
-                                            <a href="portfolio-single4.html" target="_blank" class="ajax"><img
+                                            <a href="#" target="_blank" class="ajax"><img
                                                     src="images/folio/2.jpg" alt=""></a>
                                             <div class="post-det-num">02.</div>
                                         </div>
                                         <div class="post-det fl-wrap">
-                                            <h3><a href="portfolio-single4.html" target="_blank" class="ajax">TNS-SRV-F</a></h3>
-                                            <div class="post-header fl-wrap"><span>27 may 2020</span> <a href="#">Branding</a>
-                                                <a href="#">Video</a></div>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in
-                                                pulvinar neque. Nulla finibus lobortis pulvinar. Donec a consectetur
-                                                nulla...</p>
+                                            <h3><a href="#" target="_blank" class="ajax">Self-Hosted at The Northstar School</a></h3>
+                                            <p>TNS manages their own servers for their LMS (openEDX), School Management Platform (Gibbon) and communication platform (RocketChat).</p>
                                             <div class="clearfix"></div>
-                                            <a href="portfolio-single4.html" target="_blank" class="ajax post-link">Read
-                                                More <i class="fal fa-long-arrow-right"></i></a>
+                                            <!-- <a href="#" target="_blank" class="ajax post-link">Read
+                                                More <i class="fal fa-long-arrow-right"></i></a> -->
                                         </div>
                                     </div>
                                     <div class="pr-bg"></div>
@@ -196,20 +188,18 @@
                                 <div class="gallery-item">
                                     <div class="grid-item-holder hov_zoom">
                                         <div class="grid-post-media fl-wrap">
-                                            <a href="portfolio-single4.html" target="_blank" class="ajax"><img
+                                            <a href="#" target="_blank" class="ajax"><img
                                                     src="images/folio/3.jpg" alt=""></a>
                                             <div class="post-det-num">03.</div>
                                         </div>
                                         <div class="post-det fl-wrap">
-                                            <h3><a href="portfolio-single4.html" target="_blank" class="ajax">PROJECT-AMS</a></h3>
-                                            <div class="post-header fl-wrap"><span>27 may 2020</span> <a href="#">Branding</a>
-                                                <a href="#">Video</a></div>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in
-                                                pulvinar neque. Nulla finibus lobortis pulvinar. Donec a consectetur
-                                                nulla...</p>
+                                            <h3><a href="#" target="_blank" class="ajax">PROJECT-AMS</a></h3>
+                                            <!-- <div class="post-header fl-wrap"><span>27 may 2020</span> <a href="#">Branding</a>
+                                                <a href="#">Video</a></div> -->
+                                            <p>AMS aka Automated Media Stack is built with micro-services such as Jackett,Radarr,Sonarr,Lidarr,Bazarr,OMBI embedd to boost the power of jellyfin.</p>
                                             <div class="clearfix"></div>
-                                            <a href="portfolio-single4.html" target="_blank" class="ajax post-link">Read
-                                                More <i class="fal fa-long-arrow-right"></i></a>
+                                            <!-- <a href="#" target="_blank" class="ajax post-link">Read
+                                                More <i class="fal fa-long-arrow-right"></i></a> -->
                                         </div>
                                     </div>
                                     <div class="pr-bg"></div>
