--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                             <!-- swiper-slide-->
                                             <div class="swiper-slide">
                                                 <div class="half-hero-wrap">
-                                                    <h1>Hiren Panchani  - <br><span> System Design</span> &<br> <span>DevSecOps</span> Engineer</h1>
+                                                    <h1>Hiren Panchani  - <br><span>Solution Architect</span> &<br> <span>DevOps</span> Engineer</h1>
                                                     <div class="clearfix"></div>
                                                 </div>
                                             </div>
