added meta tags

--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
 <head>
     <!--=============== basic  ===============-->
     <meta charset="UTF-8">
-    <title>hkpanchani - Portfolio</title>
+    <title>Hiren Panchani | hkpanchani | About</title>
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="robots" content="index, follow"/>
-    <meta name="keywords" content=""/>
-    <meta name="description" content=""/>
+    <meta name="keywords" content="hkpanchani, Hiren, Panchani, Hiren Panchani"/>
+    <meta name="description" content="Some words about Hiren Panchani aka hkpanchani"/>
     <!--=============== css  ===============-->
     <link type="text/css" rel="stylesheet" href="css/plugins.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
