--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
         <!--=============== basic  ===============-->
         <meta charset="UTF-8">
-        <title>hkpanchani - Portfolio</title>
+        <title>Hiren Panchani | hkpanchani | Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="robots" content="index, follow"/>
-        <meta name="keywords" content=""/>
-        <meta name="description" content=""/>
+        <meta name="keywords" content="hkpanchani, Hiren, Panchani, Hiren Panchani"/>
+        <meta name="description" content="Hiren Panchani - An Experienced Solution Architect and DevOps Engineer"/>
         <!--=============== css  ===============-->
         <link type="text/css" rel="stylesheet" href="css/plugins.css">
         <link type="text/css" rel="stylesheet" href="css/style.css">
